--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -10,55 +10,78 @@
     display: inline-block;
     width: 500px;
     height: 500px;
-    border-radius: 30px;
-    padding: 5px;
-    margin: auto;
-    user-select: none;
-    border: 7px solid #000000;
-}
-
-.contenedorNombreLogo
-{
-    display: inline-block;
-    width: 100%;
     border-radius: 20px;
     padding: 5px;
     margin: auto;
     user-select: none;
-    border: 2px solid #000000;
+    border: 7px solid #a1ceb2;
+    background-color: #a1ceb2;
+}
+
+.contenedorNombreLogo
+{
+    width: 95%;
+    height: 55%;
+    border-radius: 20px;
+    padding: 5px;
+    margin: auto;
+    user-select: none;
+    border: 2px solid #1c5059;
+    background-color: #1c5059;
     margin-bottom: 7px;
 }
+
+.contenedorServicioEnProceso
+{
+    display: table-cell;
+    border-radius: 20px;
+    border: 2px solid #1c5059;
+    background-color: #1c5059;
+    height: 175px;
+    color: #ffff;
+    font-family: 'Arial', sans-serif;
+    font-weight: 600;
+}
+.contenedorPrincipal
+{
+    width: 95%;
+    height: 55%;
+    display: table;
+    user-select: none;
+    border-radius: 20px;
+    user-select: none;
+    margin: auto;
+    padding: 5px;
+    
+}
+
 
 .cuerpoPerfil h1
 {
     text-align: center;
     font-size: 25px;
+    color: rgb(60, 96, 240);
+    font-family: 'Arial', sans-serif;
+    font-weight: 600;
 }
 
 .cuerpoPerfil p
 {
     text-align: center;
-    font-size: 17px;
+    font-size: 21px;
     color: white;
+    font-family: 'Arial', sans-serif;
+    font-weight: 600;
 }
 
 .userLogoProfile
 {
     display: block;
     margin: 5px auto 5px auto;
-    width: 150px;
-    height: 150px;
+    width: 135px;
+    height: 135px;
 }
 
-.contenedorPrincipal
-{
-    width: 100%;
-    display: table;
-    border-radius: 20px;
-    user-select: none;
-    /* border: 5px solid red; */
-    margin: auto;
-}
 
 .row
 {
@@ -70,17 +93,10 @@
 {
     display: table-cell;
     vertical-align: middle;
-    color: white;
+    color: #1c5059;
+    font-family: 'Arial', sans-serif;
+    font-weight: 800;
 }
-
-.contenedorServicioEnProceso
-{
-    display: table-cell;
-    border-radius: 20px;
-    border: 2px solid #000000;
-    height: 175px;
-}
-
 .contenedorBoton
 {
     display: table-cell;
@@ -88,14 +104,6 @@
     border: 2px solid #000000;
     height: 175px;
 }
-
-.contenedorCerrarSesion
-{
-    display: table-cell;
-    /* border: 5px solid red; */
-    height: 50px;
-}
-
 .contenedorEditarPerfil
 {
     display: table-cell;
@@ -103,48 +111,13 @@
     height: 50px;
 }
 
-.contenedorBoton button
-{
-    height: 50px;
-    width: 80%;
-    background-color: #0b4885;
-    border-radius: 15px;
-    cursor: pointer;
-    color: rgb(0, 0, 0);
-}
-
-.contenedorServicioEnProceso button
-{
-    height: 30px;
-    width: 80%;
-    background-color: #0b4885;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-top: 140px;
-    color: rgb(0, 0, 0);
-}
-
-.cuerpoPerfil button:hover
-{
-    background-color: #5e5e5e;
-}
 
 .contenedorCerrarSesion button
 {
     width: 80%;
-    background-color: #0b4885;
+    background-color: #a1ceb2;
     border-radius: 15px;
     cursor: pointer;
-    color: rgb(0, 0, 0);
-    margin-top: 20px;
-}
-
-.contenedorEditarPerfil button
-{
-    width: 80%;
-    background-color: #0b4885;
-    border-radius: 15px;
-    cursor: pointer;
-    color: rgb(0, 0, 0);
-    margin-top: 20px;
+    color: #1c5059;
+    margin-top: 30px;
 }
