--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,16 +5,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffffff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-h1 {
-  color: white;
+  background-color: #ffff;
 }
 
-button{
+h1 {
+  color: #ffff;
+  text-align: center;
+  margin-top: 30px;
+}
+
+button {
   font-size: large;
+  background-color: #ffff;
+  color: rgb(141, 117, 117);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
